Update hierarchy of java.lang.ref.reference.md